--- a/2. Ejercicio Histogramas y Diagramas de Cajas/1. Ejercicio Histograma & Box Plots.ipynb
+++ b/2. Ejercicio Histogramas y Diagramas de Cajas/1. Ejercicio Histograma & Box Plots.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "4            1191  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "Text(0, 0.5, 'Frecuencia')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "Text(0, 0.5, 'Frecuencia')"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "Text(0, 0.5, 'Frecuencia')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,8 @@
     "---\n",
     "\n",
     "1. Vemos como la distribucion de perros es mas grande que la de catos, sin embargo gatos tiene datos outliers en ambos sentidos, en cambio perros solo tiene outliers al lado izquierdo de la distribucion.\n",
-    "2. lo anterior se refuerza si miramos los rangos intercuartílicos de cada distribucion, siendo de le gatos perros mayor con un valor de 9.6% y para gatos de 4.8%."
+    "2. lo anterior se refuerza si miramos los rangos intercuartílicos de cada distribucion, siendo de le gatos perros mayor con un valor de 9.6% y para gatos de 4.8%.\n",
+    "3. En promedio, el % de dueños de perros es mayor a la de gatos, 37% vs 32%, pasa lo mismo con la mediana, donde la mediana de perros es de 36.6 % y la de gatos de 31.3 %."
    ]
   },
   {
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +621,7 @@
        "4            1191  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -676,12 +677,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30000000000000027\n",
+      "2.0\n",
+      "2.0408163265306123\n",
+      "0.30000000000000004\n",
+      "1.6\n",
+      "1.5877551020408163\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calcular el rango intercuartílico  de gatos.\n",
+    "q3_cat, q1_cat = np.percentile(df['Mean Number of Cats'], [75, 25])\n",
+    "iqr_cat = q3_cat - q1_cat\n",
+    "print(iqr_cat)\n",
+    "\n",
+    "mediana_cat = df['Mean Number of Cats'].median()\n",
+    "print(mediana_cat)\n",
+    "\n",
+    "mean_cat = df['Mean Number of Cats'].mean()\n",
+    "print(mean_cat)\n",
+    "\n",
+    "\n",
+    "# Calculamos el rango intercuartílico de perros.\n",
+    "q3_dog, q1_dog = np.percentile(df['Mean Number of Dogs per household'], [75, 25])\n",
+    "iqr_dog = q3_dog - q1_dog\n",
+    "print(iqr_dog)\n",
+    "\n",
+    "mediana_dog = df['Mean Number of Dogs per household'].median()\n",
+    "print(mediana_dog)\n",
+    "\n",
+    "\n",
+    "mean_dog = df['Mean Number of Dogs per household'].mean()\n",
+    "print(mean_dog)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion:\n",
-    "1. En promedio, el % de dueños de perros es mayor a la de gatos, 37% vs 32%, pasa lo mismo con la mediana, donde la mediana de perros es de 36.6 % y la de gatos de 31.3 %.\n"
+    "#### Conclusion:\n",
+    "---\n",
+    "1. Vemos que el rango entre ambas distribuciones es practicamente iguall siendo el IQR de gatos = 0.3 y la de perros IQR = 0.3.\n",
+    "2. No vemos que halla muchos outliers en ninguna de las distribuciones.\n",
+    "3. Al revisar las medianas, vemos que la mediana de Gatos es mayor que la de perros, 2.04 vs 1.6.\n",
+    "4. Pasa lo mismo con los promedios, Gatos es mayo con un promedio de 2.04 a perros con un valor de 1.58.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
